# zero_to_production

./: Cargo.toml
scripts/: db-init.sh  init_db.sh
scripts/sql/: subscriptions.sql
src/: lib.rs  main.rs
tests/: health_check.rs
