[package]
name = "zero_to_production"
version = "0.1.0"
authors = ["Bucovala Sebastian"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
actix-web = "4.5.1"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
